--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 	</div>
 	<br>
 	<div class="footer">
-		<h1>Designed and Coded By COLLINS KOECH of COKOBOX TECH SOLUTIONS</h1>
+		<h1>Designed and Coded By COLLINS KOECH of DevcoKenya</h1>
 	</div>
 </body>
 </html>
